# fpapers

./: Cargo.toml  README.md
src/: extract.rs  fpaper.rs  lib.rs
